--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "npx prettier --check app && npx eslint app --cache --cache-location ./node_modules/.cache/eslint",
+    "lint:fix": "npx prettier --write app && npx eslint --fix app --cache --cache-location ./node_modules/.cache/eslint",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
   },
@@ -31,6 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
