use Noto Sans JP & improve style

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,12 @@
     "atcoder",
     "clsx",
     "daisyui",
+    "Noto",
     "qiita",
     "Ryota",
     "Sasaki",
     "sassan",
+    "Segoe",
     "tailwindcss",
     "wantedly",
     "zenn"
