--- a/package.json
+++ b/package.json
@@ -5,26 +5,31 @@
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
+    "deploy": "npm run build && wrangler pages deploy",
     "dev": "remix vite:dev",
-    "lint": "npx prettier --check app && npx eslint app --cache --cache-location ./node_modules/.cache/eslint",
-    "lint:fix": "npx prettier --write app && npx eslint --fix app --cache --cache-location ./node_modules/.cache/eslint",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "lint": "npx prettier --check . && npx eslint app --cache --cache-location ./node_modules/.cache/eslint",
+    "lint:fix": "npx prettier --write . && npx eslint --fix app --cache --cache-location ./node_modules/.cache/eslint",
+    "start": "wrangler pages dev -k STAR_COUNT ./build/client",
+    "typecheck": "tsc",
+    "typegen": "wrangler types",
+    "preview": "npm run build && wrangler pages dev",
+    "cf-typegen": "wrangler types"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@remix-run/node": "^2.13.1",
+    "@remix-run/cloudflare": "^2.15.2",
+    "@remix-run/cloudflare-pages": "^2.15.2",
     "@remix-run/react": "^2.13.1",
-    "@remix-run/serve": "^2.13.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241224.0",
     "@remix-run/dev": "^2.13.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
@@ -43,7 +48,8 @@
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
     "vite": "^5.4.9",
-    "vite-tsconfig-paths": "^5.0.1"
+    "vite-tsconfig-paths": "^5.0.1",
+    "wrangler": "^3.99.0"
   },
   "engines": {
     "node": ">=20.0.0"
