--- a/wrangler.toml
+++ b/wrangler.toml
@@ -41,8 +41,8 @@ pages_build_output_dir = "./build/client"
 # Bind a KV Namespace. Use KV as persistent storage for small key-value pairs.
 # Docs: https://developers.cloudflare.com/pages/functions/bindings/#kv-namespaces
 [[kv_namespaces]]
-binding = "STAR_COUNT"
-id = "b276516a4fde4c958bbfa74b18456c04"
+binding = "GITHUB_REPOSITORIES"
+id = "0f204881bea0489a91798731a8aa98b3"
 
 # Bind a Queue producer. Use this binding to schedule an arbitrary task that may be processed later by a Queue consumer.
 # Docs: https://developers.cloudflare.com/pages/functions/bindings/#queue-producers
