--- a/wrangler.toml
+++ b/wrangler.toml
@@ -44,6 +44,10 @@ pages_build_output_dir = "./build/client"
 binding = "GITHUB_REPOSITORIES"
 id = "0f204881bea0489a91798731a8aa98b3"
 
+[[kv_namespaces]]
+binding = "SVGS"
+id = "c52f2f08d6d246b9aae205615817fcc1"
+
 # Bind a Queue producer. Use this binding to schedule an arbitrary task that may be processed later by a Queue consumer.
 # Docs: https://developers.cloudflare.com/pages/functions/bindings/#queue-producers
 # [[queues.producers]]
