improve skill filter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,10 @@
     "daisyui",
     "Hasura",
     "isbot",
+    "materialui",
     "Noto",
     "qiita",
+    "raspberrypi",
     "Ryota",
     "Sasaki",
     "sassan",
