update Projects data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,10 @@
     "daisyui",
     "Hasura",
     "isbot",
+    "kishukusha",
     "materialui",
+    "meibo",
+    "MSVC",
     "Noto",
     "qiita",
     "raspberrypi",
@@ -16,6 +19,8 @@
     "Sasaki",
     "sassan",
     "Segoe",
+    "selva",
+    "simplerich",
     "starcount",
     "SVGS",
     "tailwindcss",
