--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,14 @@
     "source.fixAll.eslint": "explicit"
   },
   "cSpell.words": [
+    "aisaac",
     "atcoder",
     "clsx",
     "daisyui",
     "Hasura",
+    "Hiryu",
     "isbot",
+    "KIKAKU",
     "kishukusha",
     "materialui",
     "meibo",
@@ -20,6 +23,7 @@
     "sassan",
     "Segoe",
     "selva",
+    "Shuyukan",
     "simplerich",
     "starcount",
     "SVGS",
