--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "isbot": "^5.1.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "dol": "*"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241224.0",
@@ -50,5 +51,8 @@
   },
   "engines": {
     "node": ">=20.0.0"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
