--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "remix vite:build",
     "deploy": "npm run build && wrangler pages deploy",
     "dev": "remix vite:dev",
-    "lint": "npx prettier --check . && npx eslint app --cache --cache-location ./node_modules/.cache/eslint",
-    "lint:fix": "npx prettier --write . && npx eslint --fix app --cache --cache-location ./node_modules/.cache/eslint",
+    "lint": "npx prettier --check . && npx eslint app functions --cache --cache-location ./node_modules/.cache/eslint",
+    "lint:fix": "npx prettier --write . && npx eslint --fix app functions --cache --cache-location ./node_modules/.cache/eslint",
     "start": "wrangler pages dev ./build/client",
     "typecheck": "tsc",
     "typegen": "wrangler types",
@@ -22,9 +22,7 @@
     "clsx": "^2.1.1",
     "isbot": "^5.1.17",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "dol": "*"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241224.0",
@@ -51,8 +49,5 @@
   },
   "engines": {
     "node": ">=20.0.0"
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+  }
 }
