--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "clsx": "^2.1.1",
     "isbot": "^5.1.17",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241224.0",
